syntax = "proto3";

import "utils.proto";
import "google/protobuf/timestamp.proto";

option go_package = "soa-project/user-service/proto/postservice";

package post_service;

service PostService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {}

    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {}

    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {}

    rpc GetPost(GetPostRequest) returns (GetPostResponse) {}

    rpc GetPosts(GetPostsRequest) returns (GetPostsResponse) {}
}

message Post {
    string contents = 1;
    string description = 2;
    utils.Id author_id = 3;
    repeated string tags = 4;
    bool is_private = 5;
}

message PostMetaInfo {
    google.protobuf.Timestamp creation_time = 1;
    google.protobuf.Timestamp last_update_time = 2;
}

message CreatePostRequest {
    utils.Id user_id = 1;
    Post post = 2;
}

message CreatePostResponse {
    utils.Id id = 1;
}

message DeletePostRequest {
    utils.Id user_id = 1;
    utils.Id id = 2;
}

message DeletePostResponse {
}

message UpdatePostRequest {
    utils.Id user_id = 1;
    utils.Id id = 2;
    Post post = 3;
}

message UpdatePostResponse {
}

message GetPostRequest {
    utils.Id user_id = 1;
    utils.Id id = 2;
}

message GetPostResponse {
    Post post = 1;
    PostMetaInfo meta = 2;
}

message GetPostsRequest {
    utils.Id user_id = 1;
    uint32 page_num = 2;
}

message GetPostsResponse {
    repeated utils.Id ids = 1;
    repeated Post posts = 2;
    repeated PostMetaInfo metas = 3;
}
